Refactor ExternalLinker to improve error handling and update SPARQL queries for Wikidata and DBpedia