@@ -11,10 +11,12 @@ import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.time.Duration;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class ExternalLinker {
     private static final Logger logger = LoggerFactory.getLogger(ExternalLinker.class);
-    private static final String WIKIDATA_SPARQL_ENDPOINT = "https://query.wikidata.org/sparql";
+    private static final String WIKIDATA_ENDPOINT = "https://query.wikidata.org/sparql";
     private final HttpClient httpClient;
 
     public ExternalLinker() {
@@ -33,32 +35,82 @@ public class ExternalLinker {
                 model.createProperty("http://schema.org/name"))
                 .getString();
 
-            String wikidataUri = findWikidataResource(pokemonName);
-            if (wikidataUri != null) {
-                pokemon.addProperty(OWL.sameAs, 
-                    model.createResource(wikidataUri));
-                String dbpediaUri = wikidataToDBpedia(wikidataUri);
-                if (dbpediaUri != null) {
+            try {
+                // First get the Wikidata URI
+                String wikidataUri = findWikidataResource(pokemonName);
+                if (wikidataUri != null) {
                     pokemon.addProperty(OWL.sameAs, 
-                        model.createResource(dbpediaUri));
+                        model.createResource(wikidataUri));
+                    logger.info("Added Wikidata link for {}: {}", 
+                        pokemonName, wikidataUri);
+                    
+                    // Get DBpedia URI from Wikidata
+                    String dbpediaUri = wikidataToDBpedia(wikidataUri);
+                    if (dbpediaUri != null) {
+                        pokemon.addProperty(OWL.sameAs,
+                            model.createResource(dbpediaUri));
+                        logger.info("Added DBpedia link for {}: {}",
+                            pokemonName, dbpediaUri);
+                    }
                 }
-                logger.info("Added external links for {}", pokemonName);
+            } catch (Exception e) {
+                logger.warn("Error adding external links for {}: {}", 
+                    pokemonName, e.getMessage());
             }
         }
     }
 
     private String findWikidataResource(String pokemonName) {
-        String query = String.format(
-            "SELECT ?item WHERE {" +
-            "  ?item rdfs:label \"%s\"@en ." +
-            "  ?item wdt:P31/wdt:P279* wd:Q1420 . # instance of Pokemon" +
-            "}", pokemonName);
+        String query = "SELECT ?item WHERE {" +
+                      "  ?item rdfs:label \"" + pokemonName + "\"@en ." +
+                      "  ?item wdt:P31 wd:Q3966183 ." + // instance of Pokemon
+                      "  SERVICE wikibase:label { bd:serviceParam wikibase:language \"en\" }" +
+                      "}";
 
         try {
-            String encodedQuery = java.net.URLEncoder.encode(query, "UTF-8");
+            String encodedQuery = URLEncoder.encode(query, StandardCharsets.UTF_8);
             HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(WIKIDATA_SPARQL_ENDPOINT + "?query=" + encodedQuery))
+                .uri(URI.create(WIKIDATA_ENDPOINT + "?query=" + encodedQuery))
                 .header("Accept", "application/sparql-results+json")
+                .header("User-Agent", "PokemonKGBuilder/1.0")
+                .GET()
+                .build();
+
+            logger.debug("Querying Wikidata for Pokemon: {}", pokemonName);
+            HttpResponse<String> response = httpClient.send(request, 
+                HttpResponse.BodyHandlers.ofString());
+
+            if (response.statusCode() == 200) {
+                JSONObject json = new JSONObject(response.body());
+                JSONArray bindings = json.getJSONObject("results")
+                                      .getJSONArray("bindings");
+                
+                if (!bindings.isEmpty()) {
+                    return bindings.getJSONObject(0)
+                                 .getJSONObject("item")
+                                 .getString("value");
+                }
+            }
+            logger.debug("Wikidata response: {}", response.body());
+        } catch (Exception e) {
+            logger.warn("Error querying Wikidata: {}", e.getMessage());
+        }
+        return null;
+    }
+
+    private String wikidataToDBpedia(String wikidataUri) {
+        // Extract Wikidata ID
+        String wikidataId = wikidataUri.substring(wikidataUri.lastIndexOf("/") + 1);
+        String query = "SELECT ?article WHERE {" +
+                      "  wd:" + wikidataId + " wdt:P1889 ?article ." + // DBpedia external link
+                      "}";
+
+        try {
+            String encodedQuery = URLEncoder.encode(query, StandardCharsets.UTF_8);
+            HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(WIKIDATA_ENDPOINT + "?query=" + encodedQuery))
+                .header("Accept", "application/sparql-results+json")
+                .header("User-Agent", "PokemonKGBuilder/1.0")
                 .GET()
                 .build();
 
@@ -71,49 +123,13 @@ public class ExternalLinker {
                                       .getJSONArray("bindings");
                 if (!bindings.isEmpty()) {
                     return bindings.getJSONObject(0)
-                                 .getJSONObject("item")
+                                 .getJSONObject("article")
                                  .getString("value");
                 }
             }
+            logger.debug("DBpedia lookup response: {}", response.body());
         } catch (Exception e) {
-            logger.warn("Error finding Wikidata resource: {}", e.getMessage());
-        }
-        return null;
-    }
-
-    private String wikidataToDBpedia(String wikidataUri) {
-        // Convert Wikidata URI to DBpedia URI
-        // Example: http://www.wikidata.org/entity/Q2859 -> http://dbpedia.org/resource/Bulbasaur
-        String wikidataId = wikidataUri.substring(wikidataUri.lastIndexOf("/") + 1);
-        String query = String.format(
-            "SELECT ?article WHERE {" +
-            "  wd:%s wdt:P1551 ?article . " + // P1551 is the property for DBpedia ID
-            "}", wikidataId);
-
-        try {
-            String encodedQuery = java.net.URLEncoder.encode(query, "UTF-8");
-            HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(WIKIDATA_SPARQL_ENDPOINT + "?query=" + encodedQuery))
-                .header("Accept", "application/sparql-results+json")
-                .GET()
-                .build();
-
-            HttpResponse<String> response = httpClient.send(request, 
-                HttpResponse.BodyHandlers.ofString());
-
-            if (response.statusCode() == 200) {
-                JSONObject json = new JSONObject(response.body());
-                JSONArray bindings = json.getJSONObject("results")
-                                      .getJSONArray("bindings");
-                if (!bindings.isEmpty()) {
-                    String dbpediaId = bindings.getJSONObject(0)
-                                             .getJSONObject("article")
-                                             .getString("value");
-                    return "http://dbpedia.org/resource/" + dbpediaId;
-                }
-            }
-        } catch (Exception e) {
-            logger.warn("Error converting Wikidata to DBpedia: {}", e.getMessage());
+            logger.warn("Error converting to DBpedia URI: {}", e.getMessage());
         }
         return null;
     }
